fix: footer style overflow (#63)

--- a/src/components/HomepageStarter/styles.module.scss
+++ b/src/components/HomepageStarter/styles.module.scss
@@ -1,6 +1,5 @@
 .sectionStarter {
     width: 100%;
-    //height: 400px;
     background-color: white;
     display: flex;
     align-items: center;
@@ -21,4 +20,11 @@
     width: 600px;
     text-align: center;
     margin-bottom: 48px;
+}
+
+@media screen and (max-width: 600px) {
+    .inner {
+        width: 100%;
+        padding: 0 24px;
+    }
 }
